# plutus-pioneer-program

./: .gitignore  README.md
code/: cabal.project
code/AssetManager/: AssetManager.cabal
code/AssetManager/assets/: bob-assets.addr  bob-assets.plutus  bob-script.addr  bob-script.plutus  burn-asset.tx  burn-asset.txbody  dept-pkh-datum.json  give-bob-script.tx  give-bob-script.txbody  grab-bob-script.tx  grab-bob-script.txbody  mint-asset.plutus  mint-asset.tx  mint-asset.txbody
code/AssetManager/contracts/: EmpAssets.hs  MintAsset.hs
code/AssetManager/scripts/: burn.sh  give.sh  grab.sh  mint.sh
code/Week02/assets/: homework1.addr  homework1.plutus  homework2.addr  homework2.plutus
code/Week02/homework/: Homework1.hs  Homework2.hs
code/Week02/scripts/: homework1-give.sh  homework1-grab.sh  homework2-grab.sh
code/Week03/assets/: parameterized-vesting.plutus
code/Week03/homework/: Homework1.hs  Homework2.hs
code/Week04/assets/: homework1-give.tx  homework1-give.txbody  homework1.addr  mistery-datum.json
code/Week04/scripts/: homework1-give.sh  homework1-grab.sh  homework2-give.sh  homework2-grab.sh
code/Week05/: Week05.cabal
code/Week05/assets/: homework1.addr  signed-mint.tx  signed-mint.txbody  signed.plutus
code/Week05/lecture/: MintAsset.hs  SignedPlus.hs
code/Week05/scripts/: signed-burn.sh  signed-mint.sh
keys/: bob.addr  bob.pkh  bob.skey  bob.vkey  dept.addr  dept.pkh  dept.skey  dept.vkey
